--- a/.github/workflows/bootcamp_main.yml
+++ b/.github/workflows/bootcamp_main.yml
@@ -29,7 +29,7 @@ jobs:
     - name: Install Surge 
       uses: npm install -g surge
     - name: Run Surge
-      run: surge./ bootcamp2020_workflowprt3.surge.sh -- token ${{secret.SURGE_TOKEN}}
+      run: surge./ ParticalClassBoot_2020.surge.sh --token{{secrets.SURGE_TOKEN}}
  
      
         
