--- a/.github/workflows/bootcamp_main.yml
+++ b/.github/workflows/bootcamp_main.yml
@@ -29,7 +29,7 @@ jobs:
     - name: Install Surge 
       run: npm install -g surge
     - name: Run Surge
-      run: surge ./ prtboot2020.surge.sh --token {{Secrets.SURGE_TOKEN}}
+      run: surge ./ prtboot2020.surge.sh --token ${{Secrets.SURGE_TOKEN}}
  
      
         
