--- a/.github/workflows/wrkflowprt3.yml
+++ b/.github/workflows/wrkflowprt3.yml
@@ -28,4 +28,4 @@ jobs:
     - name: Install Surge 
       run: npm install -g surge
     - name: Run Surge
-      run: surge ./ prtbootprt3.surge.sh --token{{secrets.SURGE_TOKEN}}
+      run: surge ./ prtbootprt3.surge.sh --token ${{secrets.SURGE_TOKEN}}
